# buddy-williams

./: .dockerignore  CLAUDE.md  README.md  style-guide.md
.github/workflows/: deploy.yml
essays/: ai-economics-time-traveler.md  ai-phase-change.md  computation-conjecture.md  computer-people.md  cyclic-rationality.md  economics-intelligence-age.md  framework-of-personhood.md  layers.md  live-above.md  outcome-economy.md  scm-methodology.md  state-of-ai-june-2026.md  structural-convergence-thesis.md  technohumanism.md  utility-of-truth.md  what-is-a-computer.md  why-hypotheticals-matter.md
fragments/: emma-build-independence.md  stocks-flows-and-the-static-society.md
resume/: my-work.md
website/: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md  fly.toml
website/content/: site.toml  writings.toml
website/content/essays/: structural-convergence-thesis.md  what-is-a-computer.md
website/src/: content.rs  main.rs  markdown.rs  routes.rs
website/static/css/: site.css
website/static/js/: site.js
website/templates/: base.html  consulting.html  essay.html  home.html  notfound.html  writings.html
